--- a/_themes/mattsoria/sass/pages/_about.scss
+++ b/_themes/mattsoria/sass/pages/_about.scss
@@ -25,7 +25,7 @@
     }
   }
   .header_section {
-    background: image-url('matt_soria.jpg') center;
+    background: image-url('photobooth.jpg') -45px center;
     h2 {
       margin: 0;
       font-size: $huge;
